--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: ISM7570 Data Mining
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
-baseurl: "/datamining/syllabus" # the subpath of your site, e.g. /blog
+baseurl: "/datamining" # the subpath of your site, e.g. /blog
 url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: aiprof1
 #github_username:  aiprof
