--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@
 
 title: ISM7570 Data Mining
 #email: ajitsurfs@gmail.com
-#description: >- # this means to ignore newlines until "baseurl:"
-#  Write an awesome description for your new site here. You can edit this
+#description: >-  this means to ignore newlines until "baseurl:"
+# Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 baseurl: "/datamining" # the subpath of your site, e.g. /blog
