--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://
 #github_username:  aiprof
 
 # Build settings
-theme: slate
+theme: minima
 ##plugins:
 ##  - jekyll-feed
 
