--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://
 
 # Build settings
 theme: minima
-##plugins:
-##  - jekyll-feed
+plugins:
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
