--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,15 @@ theme: minima
 plugins:
   - jekyll-feed
 
+header_pages:
+ - testPage.markdown
+ - syllabus.markdown
+ - about.markdown
+
+# Include items
+include:
+  - _pages
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
